Table "user" {
  "id" SERIAL [pk, increment]
  "first_name" VARCHAR(255) [not null]
  "last_name" VARCHAR(255) [not null]
  "email" VARCHAR(255) [unique, not null]
  "password_hash" VARCHAR(255) [not null]
}

Table "role" {
  "id" SERIAL [pk, increment]
  "role_name" VARCHAR(255) [not null]
}

Table "user_role" {
  "user_id" INT [not null]
  "role_id" INT [not null]

  Indexes {
    (user_id, role_id) [pk]
  }
}

Table "product" {
  "id" SERIAL [pk, increment]
  "barcode" VARCHAR(255) [not null]
  "title" VARCHAR(255) [not null]
  "quantity" INT [not null]
  "expiry_date" DATE [not null]
  "created_by" INT [not null]
  "created_at" TIMESTAMPTZ [not null, default: `NOW()`]
  "updated_by" INT
  "updated_at" TIMESTAMPTZ
}

Table "order_status" {
  "id" SERIAL [pk, increment]
  "status_name" VARCHAR(255) [not null]
}

Table "order" {
  "id" SERIAL [pk, increment]
  "submit_date" TIMESTAMPTZ
  "status_id" INT [not null]
  "qr_code" VARCHAR(255) [not null]
  "created_by" INT [not null]
  "created_at" TIMESTAMPTZ [not null, default: `NOW()`]
  "updated_by" INT
  "updated_at" TIMESTAMPTZ
}

Table "order_product" {
  "order_id" INT [not null]
  "product_id" INT [not null]
  "quantity" INT [not null]

  Indexes {
    (order_id, product_id) [pk]
  }
}

Table "update_type" {
  "id" SERIAL [pk, increment]
  "type_name" VARCHAR(255) [not null]
}

Table "product_history" {
  "id" SERIAL [pk, increment]
  "product_id" INT [not null]
  "update_type_id" INT [not null]
  "update_message" VARCHAR(255) [not null]
  "quantity_affected" INT [not null]
  "date_captured" DATE [not null]
  "affected_by_user" INT
  "affected_by_order" INT
}

Ref:"user"."id" < "user_role"."user_id"

Ref:"role"."id" < "user_role"."role_id"

Ref:"user"."id" < "product"."created_by"

Ref:"user"."id" < "product"."updated_by"

Ref:"order_status"."id" < "order"."status_id"

Ref:"user"."id" < "order"."created_by"

Ref:"user"."id" < "order"."updated_by"

Ref:"order"."id" < "order_product"."order_id"

Ref:"product"."id" < "order_product"."product_id"

Ref:"product"."id" < "product_history"."product_id"

Ref:"update_type"."id" < "product_history"."update_type_id"

Ref:"user"."id" < "product_history"."affected_by_user"

Ref:"order"."id" < "product_history"."affected_by_order"
